# score-avnd-flucoma

./: .gitmodules  CMakeLists.txt  addon.json
Flucoma/: AmpFeature.hpp  AmpGate.hpp  AmpSlice.hpp  AudioTransport.hpp  BaseSTFT.hpp  BufAmpGate.hpp  BufAmpSlice.hpp  BufChroma.hpp  BufCompose.hpp  BufFlatten.hpp  BufLoudness.hpp  BufMFCC.hpp  BufMelBands.hpp  BufNMF.hpp  BufNoveltySlice.hpp  BufOnsetSlice.hpp  BufPitch.hpp  BufSTFT.hpp  BufScale.hpp  BufSelect.hpp  BufSelectEvery.hpp  BufSpectralShape.hpp  BufStats.hpp  BufThresh.hpp  BufTransientSlice.hpp  Chroma.hpp  CorpusBuilder.hpp  DynComboTest.hpp  Flucoma.hpp  FluidBridge.hpp  FluidBufferPool.hpp  FluidBuffers.hpp  Gain.hpp  GridFit.hpp  HPSS.hpp  KDTreeFit.hpp  KDTreeQuery.hpp  KMeansFit.hpp  KMeansPredict.hpp  Loudness.hpp  (+33 more)
cmake/fmt-stub/: CMakeLists.txt
patches/: 0001-flucoma-core-eigen-master-compat.patch
